--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,9 @@ dev = [
     "mypy>=1.0.0",
 ]
 
+[tool.extbpy]
+platforms = ["windows-x64", "linux-x64", "macos-arm64", "macos-x64"]
+
 [build-system]
 requires = ["uv_build>=0.8.15,<0.9.0"]
 build-backend = "uv_build"
