--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -1,4 +1,4 @@
-name: Lint with Ruff
+name: Lint
 
 on:
     push:
@@ -13,13 +13,24 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-    lint:
-      name: Check code style
-      runs-on: ubuntu-latest
-      steps:
-        - uses: actions/checkout@v5
-        - uses: astral-sh/ruff-action@v3
-        - name: Check code formatting
-          run: ruff format --diff
-        - name: Lint code base
-          run: ruff check
+  lint:
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Install uv
+      uses: astral-sh/setup-uv@v3
+      with:
+        enable-cache: true
+    
+    - name: Install dependencies
+      run: uv sync --dev
+    
+    - name: Check formatting
+      run: uv run ruff format --check .
+    
+    - name: Run linter
+      run: uv run ruff check .
+    
+    - name: Run type checking
+      run: uv run mypy src/extbpy
