--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,6 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ["3.11", "3.12"]
     
     steps:
     - uses: actions/checkout@v4
@@ -22,10 +21,7 @@ jobs:
       with:
         version: "latest"
         enable-cache: true
-    
-    - name: Set up Python ${{ matrix.python-version }}
-      run: uv python install ${{ matrix.python-version }}
-    
+        
     - name: Install dependencies
       run: |
         uv sync --dev
@@ -37,7 +33,7 @@ jobs:
     
     - name: Run type checking
       run: |
-        uv run mypy src/extbpy --ignore-missing-imports
+        uv run mypy src/extbpy
     
     - name: Run tests
       run: |
@@ -53,27 +49,3 @@ jobs:
       run: |
         uv run extbpy --version
 
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-    
-    - name: Install uv
-      uses: astral-sh/setup-uv@v3
-      with:
-        enable-cache: true
-    
-    - name: Set up Python
-      run: uv python install 3.11
-    
-    - name: Install dependencies
-      run: uv sync --dev
-    
-    - name: Check formatting
-      run: uv run ruff format --check .
-    
-    - name: Run linter
-      run: uv run ruff check .
-    
-    - name: Run type checking
-      run: uv run mypy src/extbpy --ignore-missing-imports
