--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
         
     - name: Install dependencies
       run: |
-        uv sync --dev
+        uv sync --all-extras
     
     - name: Run linting
       run: |
